core/static/css/style.css
/* ... */
.faqs .card-header a span {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin-right: 10px;
    text-align: center;
    background: #8d1739;
    color: #fff;
    border-radius: 5px;
}

.faqs .card-header [data-toggle="collapse"]:after {
    font-family: 'font Awesome 5 Free';
    content: "\f067";
    float: right;
    color: #00539C;
    font-size: 12px;
    font-weight: 900;
    transition: .3s;
}

.faqs .card-header [data-toggle="collapse"][aria-expanded="true"]:after {
    font-family: 'font Awesome 5 Free';
    content: "\f068";
    float: right;
    color: #00539C;
    font-size: 12px;
    font-weight: 900;
    transition: .3s;
}

.faqs .card-body {
    padding: 15px 0 0 0;
    font-size: 16px;
    border: none;
    background: #ffffff;
}

.faqs a.btn {
    margin-top: 30px;
    padding: 15px 35px;
    font-size: 16px;
    text-transform: uppercase;
    color: #fff;
    border: none;
    border-radius: 5px;
    background: #8d1739;
    transition: .3s;
}

.faqs a.btn:hover {
    color: #ffffff;
    background: #00539C;
}


/*******************************/
/****** Pricing Plan CSS *******/
/*******************************/
.price {
    position: relative;
    padding: 45px 0 15px 0;
}

.price .price-item {
    text-align: center;
    background: #ffffff;
    border-radius: 5px;
    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
    margin-bottom: 30px;
}

.price .price-header {
    padding: 30px 0 50px 0;
    color: #000000;
    background: #FFD662;
    border-radius: 5px 5px 0 0;
}

.price .featured-item .price-header {
    color: #ffffff;
    background: #00539C;
}

.price .price-icon {
    margin-bottom: 15px;
}

.price .price-icon i {
    display: inline-block;
    font-size: 45px;
}

.price .price-title h2 {
    font-size: 24px;
    font-weight: 300;
    letter-spacing: 2px;
}

.price .price-pricing h2 {
    font-size: 60px;
    font-weight: 100;
    margin-left: 15px;
    margin-bottom: 0;
}

.price .price-pricing h2 small {
    position: absolute;
    font-size: 18px;
    font-weight: 300;
    margin-top: 16px;
    margin-left: -15px;
}

.price .price-body {
    padding: 20px 0;
    background: #ffffff;
    border-radius: 25px 30px 0 0;
    margin-top: -30px;
}

.price .price-des ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.price .price-des ul li {
    color: #2A293E;
    font-size: 14px;
    font-weight: 300;
    padding: 5px;
    border-bottom: 1px solid #eeeeee;
}

.price .price-des ul li:last-child {
    border: none;
}

.price .price-footer {
    padding-bottom: 30px;
    background: #ffffff;
    border-radius: 0 0 5px 5px;
}


.price .price-action a {
    display: inline-block;
    padding: 10px 25px;
    color: #000000;
    font-size: 14px;
    letter-spacing: 2px;
    background: #FFD662;
    border-radius: 5px;
    transition:  .3s;
}

.price .price-action a i {
    margin-right: 5px;
}

.price .price-action a:hover {
    color: #ffffff;
    background: #00539C;
}

.price .featured-item .price-action a {
    color: #ffffff;
    background: #00539C;
}

.price .featured-item .price-action a:hover {
    color: #000000;
    background: #FFD662;
}


/*******************************/
/********** Newsletter *********/
/*******************************/
.newsletter {
    position: relative;
    margin: 45px 0;
    padding: 60px 0;
    background: #00539C;
}

.newsletter h2 {
    color: #ffffff;
    font-size: 45px;
    font-weight: 100;
    text-transform: uppercase;
}

.newsletter p {
    margin: 0;
    color: #ffffff;
    font-size: 20px;
    font-weight: 300;
}

.newsletter .form {
    position: relative;
}

.newsletter input {
    height: 60px;
    border: none;
    border-radius: 5px;
}

.newsletter .btn {
    position: absolute;
    top: 5px;
    right: 5px;
    height: 50px;
    padding: 10px 20px;
    font-size: 16px;
    font-weight:400;
    text-transform: uppercase;
    color: #000000;
    background: #FFD662;
    border-radius: 5px;
    transition: .3s;
}

.newsletter .btn:hover {
    color: #ffffff;
    background: #00539C;
}


/*******************************/
/******* Testimonial CSS *******/
/*******************************/
.testimonial {
    position: relative;
    padding: 45px 0;
}

.testimonial .testimonial-item {
    position: relative;
    margin: 0 15px;
    text-align: center;
}

.testimonial .testimonial-img {
    position: relative;
    margin-bottom: 15px;
    z-index: 1;
}

.testimonial .testimonial-item img {
    margin: 0 auto;
    width: 150px;
    border: 15px solid #ffffff;
    border-radius: 100px;
}

.testimonial .testimonial-content {
    position: relative;
    margin-top: -90px;
    padding: 100px 25px 25px 25px;
    text-align: center;
    background: #FFD662;
    border-radius: 5px;
}

.testimonial .testimonial-item p {
    color: #000000;
    font-size: 16px;
    font-weight: 400;
}

.testimonial .testimonial-content h3 {
    color: #000000;
    font-size: 18px;
    font-weight: 400;
    text-transform: uppercase;
    margin-bottom: 5px;
}

.testimonial .testimonial-content h4 {
    font-size: 14px;
    font-weight: 400;
    margin-bottom: 0;
}

.testimonial .owl-nav,
.testimonial .owl-dots {
    margin-top: 15px;
    text-align: center;
}

.testimonial .owl-dot {
    display: inline-block;
    margin: 0 5px;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background: #FFD662;
}

.testimonial .owl-dot.active {
    background: #00539C;
}


/*******************************/
/*********** Blog CSS **********/
/*******************************/
.blog {
    position: relative;
    width: 100%;
    padding: 45px 0 15px 0;
}

.blog .blog-item {
    position: relative;
    width: 100%;
    border-radius: 5px;
    margin-bottom: 30px;
    background: #ffffff;
    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
}

.blog .blog-item img {
    width: 100%;
    border-radius: 5px 5px 0 0;
}
/* ... */

